Third version of Sprint 6 (repair CodeStyle)